force-app/main/default/objects/I_ST_Time_frame_to_Study__mdt/I_ST_Time_frame_to_Study__mdt.object-meta.xml
<CustomObject>
    <label>Time frame to Study</label>
    <pluralLabel>Time frame to Study</pluralLabel>
</CustomObject>