force-app/main/default/objects/I_ST_Time_frame_to_Study__mdt/fields/No_of_Yrs__c.field-meta.xml
<CustomField>
    <fullName>No_of_Yrs__c</fullName>
    <label>No of Yrs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>