force-app/main/default/objects/I_ST_Time_frame_to_Study__mdt/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <label>Semester</label>
    <length>50</length>
    <type>Text</type>
</CustomField>