force-app/main/default/objects/I_ST_Time_frame_to_Study__mdt/fields/Time_frame_to_Study__c.field-meta.xml
<CustomField>
    <fullName>Time_frame_to_Study__c</fullName>
    <label>Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-3 months</fullName>
                <default>true</default>
                <label>1-3 months</label>
            </value>
            <value>
                <fullName>3-6 months</fullName>
            </value>
            <value>
                <fullName>6-12 months</fullName>
            </value>
            <value>
                <fullName>1-2 years</fullName>
            </value>
            <value>
                <fullName>2-3 years</fullName>
            </value>
            <value>
                <fullName>3+ years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>