force-app/main/default/objects/I_ST_Time_frame_to_Study__mdt/listViews/I_ST_Intended_View.listView-meta.xml
<ListView>
    <fullName>I_ST_Intended_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Time_frame_to_Study__c</columns>
    <columns>Month__c</columns>
    <columns>Semester__c</columns>
    <columns>No_of_Yrs__c</columns>
    <filterScope>Everything</filterScope>
    <label>Intended View</label>
    <language>en_US</language>
</ListView>